# xfn-cfpe

./: .gitignore  Anthropic-XFN-Template.xlsx  README.md  requirements.txt  system-design.md
.claude-plugin/: marketplace.json
.claude/commands/: experiment.md
CAI/: README.md  __init__.py  config.py  rescore_results.py  run_experiment.py
CAI/analysis/: __init__.py  metrics.py
CAI/classifier/: __init__.py  intent.py
CAI/experiment/: __init__.py  prompts.py  runner.py  task_suite.py
CAI/kernel/: __init__.py  validator.py
CAI/models/: __init__.py  results.py  schemas.py  tasks.py
RL-O-CoV/: README.md  RL_O_CoV_Training_V2.ipynb  RL_O_CoV_Training_V2.py  RL_O_CoV_Training_V3.ipynb  RL_O_CoV_Training_V3.py  exp_proposal.md  time_to_put_the_pump_on_claude_v0.0.1.py
agents/: README.md
commands/: experiment.md
data/: README.md
designs/: SYSTEM_OVERVIEW.md
documentation/: README.md 
evaluation/: README.md
training_insights/: README.md  __init__.py  __main__.py  pyproject.toml  results.tsv
training_insights/core/: checkpoint_manager.py  common.py  dataloader.py  dataset.py  engine.py  flash_attention.py  fp8.py  gpt.py  optim.py  report.py  tokenizer.py
training_insights/dev/: LEADERBOARD.md  LOG.md  syntax_check.py
training_insights/evaluation/: __init__.py  behavioral_delta.py  checkpoint_eval.py  insights.py  parser.py  report.py  runner.py
training_insights/runs/: experiment_1_20260311_123616.json  experiment_2_20260311_123939.json  speedrun.sh
training_insights/runs/report_2/: experiment_report.md
training_insights/scripts/: base_eval.py  base_train.py  chat_eval.py  chat_rl.py  chat_sft.py  tok_eval.py  tok_train.py
training_insights/tasks/: customjson.py  humaneval.py  spellingbee.py
training_insights/tests/: test_checkpoint_eval.py  test_insights.py  test_parser.py
(+181 files in other folders)
