[project]
name = "training-insights"
version = "0.2.0"
description = "Autonomous training experiment platform with multi-dimensional checkpoint evaluation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Faycal Farhat" },
    { name = "Andrej Karpathy" },
]
license = { text = "MIT" }
dependencies = [
    "datasets>=4.0.0",
    "filelock>=3.0.0",
    "jinja2>=3.0.0",
    "kernels>=0.11.7",
    "psutil>=7.1.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.0",
    "regex>=2025.9.1",
    "requests>=2.28.0",
    "rustbpe>=0.1.0",
    "scipy>=1.15.3",
    "tabulate>=0.9.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch==2.9.1",
    "transformers>=4.57.3",
    "wandb>=0.21.3",
    "zstandard>=0.25.0",
]

[project.scripts]
ti = "training_insights.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "torch==2.9.1",
]
gpu = [
    "torch==2.9.1",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
